# IntelliSA-CLI

./: .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml  setup.cfg
.github/workflow/: ci.yaml
apps/cli/: main.py
docs/: DEVELOPMENT_REPORT.md  DOC_REFACTOR_SUMMARY.md  ROADMAP.md  SCHEMA.md  USER_HANDBOOK.md
iacsec/: __init__.py
iacsec/models/: fetch.py
models/: registry.yaml
models/codet5p-220m/: MODEL_CARD.md
scripts/: run_action_scan.py
tests/e2e/: test_sample_scan.py
tests/e2e/golden/: sample.jsonl  sample.sarif
tests/unit/: test_cli_scan.py  test_exporters.py  test_model_fetch.py  test_postfilter_engine.py
